video upload redirect fix

--- a/templates/playlist_detail.html
+++ b/templates/playlist_detail.html
@@ -147,7 +147,7 @@
             // Update video title
             const videoTitle = currentVideo.nickname || currentVideo.original_filepath;
             titleText.textContent = videoTitle;
-            videoDetailLink.href = `/video/${videoId}`;
+            videoDetailLink.href = `/video/video/${videoId}`;
             
             // Show title container and player
             titleContainer.style.display = 'block';
